# ftle

./: 3dBuildings.py  3dFTLE_ap.py  3dFTLE_cell_fast_parallel.py  3dFTLE_fast.py  3dFTLE_fast_parallel.py  3dFTLE_time_cell_fast_parallel.py  README.md  cateye.py  ftle0.py  ftle1.py  ftle2.py  ftle3.py  ftle5.py  ftle6.py  pyproject.toml  requirements.txt  test_plot.py
examples/2d/cateye/: ftle0.py  ftle2.py  ftle4.py  ftle5.py  ftle6.py
examples/2d/cateyes/: ftle1.py  ftle3.py  ftle4.py  ftle5.py  ftle6.py
examples/2d/obstacle/: flow.py  flow2.py  step.py
examples/3d/: 3dFTLE_ap.py
ftle/: lyapunov_exponent.py
paraview_plugin/: CMakeLists.txt  PalmFtleSource.py  PalmFtleUFrozenSource.py  README.md  cmake_command.sh  ftlecpp.cpp  time_index.cpp
